Better printing support, fix some small layout issues

--- a/src/less/main.less
+++ b/src/less/main.less
@@ -9,15 +9,6 @@
   padding: 4px;
 }
 
-.custom-bullets {
-  margin-left: 3px;
-
-  span {
-    position: relative;
-    left: -4px;
-  }
-}
-
 #first-half-page {
   margin-left: -@bs-col-padding-side/2;
   margin-right: @bs-col-padding-side/2;
